src/test/run-pass/simple-infer.rs


fn main() { let mut n; n = 1; log(debug, n); }
